--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -24,6 +24,17 @@ body {
   margin: 60px 0;
 }
 
+.center {
+    margin-left: auto;
+    margin-right: auto;
+    float: none;
+}
+
+.footer p {
+    text-align: center;
+    font-size: 1.1em;
+}
+
 /* Main marketing message and sign up button */
 .jumbotron {
   margin: 80px 0;
