--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -21,9 +21,6 @@ body {
   margin: 0 auto;
   max-width: 1000px;
 }
-.container > hr {
-  margin: 60px 0;
-}
 
 .center {
     margin-left: auto;
@@ -39,7 +36,7 @@ body {
 
 /* Main marketing message and sign up button */
 .jumbotron {
-  margin: 80px 0;
+  margin: 30px 0;
   text-align: center;
 }
 .jumbotron h1 {
@@ -120,4 +117,13 @@ body {
   padding: 7px 9px;
 }
 
-    
+.alert-success-shadow {
+    -webkit-box-shadow:  1px 1px 10px 1px #d6e9c6;
+    box-shadow:  1px 1px 10px 1px #d6e9c6;  
+}
+
+.alert-warning-shadow {
+    -webkit-box-shadow:  1px 1px 10px 1px #fbeed5;
+    box-shadow:  1px 1px 10px 1px #fbeed5;  
+}
+   
