--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -36,11 +36,11 @@ body {
 
 /* Main marketing message and sign up button */
 .jumbotron {
-  margin: 30px 0;
+  margin: 22px 0;
   text-align: center;
 }
 .jumbotron h1 {
-  font-size: 100px;
+  font-size: 3.7em;
   line-height: 1;
 }
 .jumbotron .lead {
