--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -37,6 +37,7 @@ body {
 .footer p {
     text-align: center;
     font-size: 0.8em;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 1);
 }
 
 .footer p a {
@@ -45,7 +46,7 @@ body {
 }
 
 .footer a:hover {
-    font-weight: 600;
+    text-shadow: 0 0 2px rgba(125, 255, 255, 1);
 }
 
 
@@ -53,6 +54,7 @@ body {
 .jumbotron {
   margin: 10px 0;
   text-align: center;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 1);
 }
 .jumbotron h1 {
   font-size: 3.7em;
