--- a/app/webroot/css/justified.css
+++ b/app/webroot/css/justified.css
@@ -18,11 +18,11 @@
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f2f2f2',GradientType=0 ); /* IE6-9 */
     background-image: linear-gradient(top, #ffffff 0%,#f2f2f2 100%); /* W3C */
     
-    -webkit-transition: color 1s linear;
-    -moz-transition: color 1s linear;
-    -ms-transition: color 1s linear;
-    -o-transition: color 1s linear;
-    transition: color 1s linear;
+    -webkit-transition: color .3s linear;
+    -moz-transition: color .3s linear;
+    -ms-transition: color .3s linear;
+    -o-transition: color .3s linear;
+    transition: color .3s linear;
 }
 .nav-justified > .active > a,
 .nav-justified > .active > a:hover,
@@ -34,7 +34,7 @@
 }
 
 .nav-justified > li > a:hover {
-    color: #0036E0;
+    color: #2a6496;
 }
 
 .nav-justified > li:first-child > a {
