--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -12,7 +12,7 @@ root {
 
 body {
     background: url('../img/ticks.png') repeat 0 0;
-    padding-top: 20px;
+    padding-top: 10px;
     padding-bottom: 60px;
     font-family: 'Oxygen', sans-serif;
     font-size: 16px;
@@ -38,11 +38,11 @@ body {
 .footer p a {
     color: #333333;
     text-decoration: none;
-    -webkit-transition: text-shadow 1s linear;
-    -moz-transition: text-shadow 1s linear;
-    -ms-transition: text-shadow 1s linear;
-    -o-transition: text-shadow 1s linear;
-    transition: text-shadow 1s linear;
+    -webkit-transition: text-shadow .2s linear;
+    -moz-transition: text-shadow .2s linear;
+    -ms-transition: text-shadow .2s linear;
+    -o-transition: text-shadow .2s linear;
+    transition: text-shadow .2s linear;
 }
 
 .footer p a:hover {
@@ -164,7 +164,92 @@ hr {
     padding-left: 5px;
 }
 
-@media (min-width: 768px) {
+.roundabout-holder {
+   list-style: none;
+   padding: 0;
+   margin: 0;
+   height: 5em;
+   width: 5em;
+}
+.roundabout-moveable-item {
+   height: 4em;
+   width: 4em;
+   cursor: pointer;
+   background-color: #ccc;
+   border: 1px solid #BBB7B7;
+}
+.roundabout-in-focus {
+   cursor: auto;
+}
+
+.my-portfolios, .test{
+    list-style: none;
+    padding: 0;
+    margin: 0 auto;
+    width: 25em;
+    height: 30em;
+}
+
+.my-portfolios li, .test li {
+    width: 25em;
+    height: 30em;
+    -webkit-box-shadow:  0px 0px 15px 2px rgba(10, 0, 0, 0.2);
+        
+    box-shadow:  0px 0px 15px 2px rgba(10, 0, 0, 0.2);
+}
+
+.wrapper {
+    height: 100%;
+    width: 100%;
+    padding: 0.5em;
+    color: #777;
+    margin: 0;
+    overflow: hidden;
+}
+
+.wrapper a {
+    width: 100%;
+    display: inline-block;
+}
+
+.wrapper a img {
+    margin: 0 auto;
+    display: block;
+    max-width:100%
+}
+
+.wrapper h4 {
+    margin: 0;
+}
+
+.wrapper hr {
+    margin: .5em 0;
+}
+
+.description p {
+    font-size: 0.9em;
+}
+
+.users-table {
+    font-size: 0.7em;
+    text-justify: auto;
+}
+
+.form-group label {
+    font-weight: normal;
+}
+
+.logo-img {
+    margin-bottom: 20px;
+    margin-top: 20px;
+    opacity: 0.56;
+}
+
+.logo-a img:hover {
+    opacity: 0.8;
+}
+
+@media (max-width: 768px) {
     .jumbotron h1 {
         font-size: 1.7em;
         line-height: 1;
