--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -298,6 +298,23 @@ a:hover, a:focus {
 }
 /* contact message envelope */
 
+
+.blogicon {
+    display: inline-block;
+    position: relative;
+    top: 1px;
+}
+
+.icon-loading {
+    background: url('../img/ajax-loader.gif') repeat 0 0;
+    height: 16px;
+    width: 16px;
+}
+
+.hide-this {
+    display: none;
+}
+
 @media (max-width: 768px) {
     .jumbotron h1 {
         font-size: 1.7em;
