--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -391,6 +391,46 @@ select {
 .modal-width {
   width: 350px;
 }
+
+
+
+/* post date */
+
+.post-date {
+  width: 3.3em;
+  float: left;
+  margin: 0 .8em;
+  color: #C5C5C5;
+  background: #fff;
+  padding: 0 7px;
+  text-align: center;
+  -webkit-border-bottom-right-radius: 6px;
+  -webkit-border-bottom-left-radius: 6px;
+  -moz-border-radius-bottomright: 6px;
+  -moz-border-radius-bottomleft: 6px;
+  border-bottom-right-radius: 6px;
+  border-bottom-left-radius: 6px;
+  text-shadow: 0px 1px 2px #383838;
+  filter: dropshadow(color=#383838, offx=0, offy=1);
+  
+  -webkit-box-shadow:  0px 3px 6px 0px #C5C5C5;
+  box-shadow:  0px 3px 6px 0px #C5C5C5;
+}
+
+.post-day {
+  font-weight: bold;
+  font-size: 2.2em;
+}
+.post-month {
+  letter-spacing: 4px;
+  text-transform: uppercase;
+}
+
+.post-year {
+  font-size: 1.2em;
+}
+
+/* post date end */
 @media (max-width: 768px) {
     .jumbotron h1 {
         font-size: 1.7em;
